[package]
name = "aegis-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.36", features = ["full"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1.0"
futures = "^0.3"
dotenv = "^0.15"
lazy_static = "^1.4"
tracing = "^0.1"
tracing-subscriber = "^0.3"
tracing-appender = "^0.2"
color-eyre = "^0.6"
chrono = "^0.4"

[target.'cfg(unix)'.dependencies]
jemallocator = "0.5"

[profile.dev.package.backtrace]
opt-level = 3
